# six-sigma

./: Dockerfile  README.md  logfire_auto_tracing.py  pyproject.toml  requirements.txt
app/: main.py  settings.py  test_main.py  tools.py
